# include-base64

./: .gitignore  COPYRIGHT  Cargo.toml  README.md
src/: lib.rs
tests/: example1.txt  example1_base64.txt  example2.txt  example2_base64.txt  example2_base64_url_safe.txt  simple.rs
